Extra clear-left to help with IE layout issue

--- a/lizard_map/media/lizard_map/lizard_map.css
+++ b/lizard_map/media/lizard_map/lizard_map.css
@@ -25,6 +25,7 @@
   margin: 0.5em 0;
   display: block;
   float: left;
+  clear: left;
   }
 
 #animation-slider
